; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/etc/extr_osf.c_option.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/etc/extr_osf.c_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"-lccdir=\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"/cpp\00", align 1
@cpp = common dso_local global i8** null, align 8
@.str.2 = private unnamed_addr constant [3 x i8] c"-I\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"/include\00", align 1
@include = common dso_local global i8** null, align 8
@.str.4 = private unnamed_addr constant [5 x i8] c"/rcc\00", align 1
@com = common dso_local global i8** null, align 8
@.str.5 = private unnamed_addr constant [3 x i8] c"-L\00", align 1
@ld = common dso_local global i8** null, align 8
@.str.6 = private unnamed_addr constant [4 x i8] c"-g4\00", align 1
@.str.7 = private unnamed_addr constant [21 x i8] c"/u/drh/lib/alpha/rcc\00", align 1
@.str.8 = private unnamed_addr constant [32 x i8] c"/u/drh/book/cdb/alpha/osf/cdbld\00", align 1
@.str.9 = private unnamed_addr constant [3 x i8] c"-o\00", align 1
@.str.10 = private unnamed_addr constant [3 x i8] c"$3\00", align 1
@.str.11 = private unnamed_addr constant [3 x i8] c"$1\00", align 1
@.str.12 = private unnamed_addr constant [3 x i8] c"$2\00", align 1
@.str.13 = private unnamed_addr constant [3 x i8] c"-g\00", align 1
@.str.14 = private unnamed_addr constant [3 x i8] c"-b\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @option(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @strncmp(i8* %4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 8)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %29

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 8
  %10 = call i8* @concat(i8* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %11 = load i8**, i8*** @cpp, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 0
  store i8* %10, i8** %12, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 8
  %15 = call i8* @concat(i8* %14, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %16 = call i8* @concat(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8* %15)
  %17 = load i8**, i8*** @include, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 0
  store i8* %16, i8** %18, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 8
  %21 = call i8* @concat(i8* %20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %22 = load i8**, i8*** @com, align 8
  %23 = getelementptr inbounds i8*, i8** %22, i64 0
  store i8* %21, i8** %23, align 8
  %24 = load i8*, i8** %3, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 8
  %26 = call i8* @concat(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.5, i64 0, i64 0), i8* %25)
  %27 = load i8**, i8*** @ld, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 8
  store i8* %26, i8** %28, align 8
  br label %70

29:                                               ; preds = %1
  %30 = load i8*, i8** %3, align 8
  %31 = call i64 @strcmp(i8* %30, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0))
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %56

33:                                               ; preds = %29
  %34 = call i64 @access(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.7, i64 0, i64 0), i32 4)
  %35 = icmp eq i64 %34, 0
  br i1 %35, label %36, label %56

36:                                               ; preds = %33
  %37 = call i64 @access(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.8, i64 0, i64 0), i32 4)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %56

39:                                               ; preds = %36
  %40 = load i8**, i8*** @com, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i64 0
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.7, i64 0, i64 0), i8** %41, align 8
  %42 = load i8**, i8*** @com, align 8
  %43 = getelementptr inbounds i8*, i8** %42, i64 5
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %43, align 8
  %44 = load i8**, i8*** @ld, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i64 0
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.8, i64 0, i64 0), i8** %45, align 8
  %46 = load i8**, i8*** @ld, align 8
  %47 = getelementptr inbounds i8*, i8** %46, i64 1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.9, i64 0, i64 0), i8** %47, align 8
  %48 = load i8**, i8*** @ld, align 8
  %49 = getelementptr inbounds i8*, i8** %48, i64 2
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.10, i64 0, i64 0), i8** %49, align 8
  %50 = load i8**, i8*** @ld, align 8
  %51 = getelementptr inbounds i8*, i8** %50, i64 3
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.11, i64 0, i64 0), i8** %51, align 8
  %52 = load i8**, i8*** @ld, align 8
  %53 = getelementptr inbounds i8*, i8** %52, i64 4
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.12, i64 0, i64 0), i8** %53, align 8
  %54 = load i8**, i8*** @ld, align 8
  %55 = getelementptr inbounds i8*, i8** %54, i64 5
  store i8* null, i8** %55, align 8
  br label %69

56:                                               ; preds = %36, %33, %29
  %57 = load i8*, i8** %3, align 8
  %58 = call i64 @strcmp(i8* %57, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.13, i64 0, i64 0))
  %59 = icmp eq i64 %58, 0
  br i1 %59, label %60, label %61

60:                                               ; preds = %56
  store i32 1, i32* %2, align 4
  br label %71

61:                                               ; preds = %56
  %62 = load i8*, i8** %3, align 8
  %63 = call i64 @strcmp(i8* %62, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.14, i64 0, i64 0))
  %64 = icmp eq i64 %63, 0
  br i1 %64, label %65, label %66

65:                                               ; preds = %61
  br label %67

66:                                               ; preds = %61
  store i32 0, i32* %2, align 4
  br label %71

67:                                               ; preds = %65
  br label %68

68:                                               ; preds = %67
  br label %69

69:                                               ; preds = %68, %39
  br label %70

70:                                               ; preds = %69, %7
  store i32 1, i32* %2, align 4
  br label %71

71:                                               ; preds = %70, %66, %60
  %72 = load i32, i32* %2, align 4
  ret i32 %72
}

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i8* @concat(i8*, i8*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i64 @access(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
